add controller product
